unpackaged/main/default/objects/Driver_Logout_Event__e/Driver_Logout_Event__e.object-meta.xml
<CustomObject>
    <description>Driver Logout Platform Event</description>
    <label>Driver Logout Event</label>
    <pluralLabel>Driver Logout Events</pluralLabel>
</CustomObject>