unpackaged/main/default/objects/Driver_Logout_Event__e/fields/DriverID__c.field-meta.xml
<CustomField>
    <fullName>DriverID__c</fullName>
    <description>Driver Id</description>
    <label>DriverID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>