unpackaged/main/default/objects/Driver_Logout_Event__e/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <description>Logged in Driver Name</description>
    <label>DriverName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>