unpackaged/main/default/objects/Driver_Logout_Event__e/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Event Description</description>
    <label>Event</label>
    <length>30</length>
    <type>Text</type>
</CustomField>