unpackaged/main/default/objects/Driver_Logout_Event__e/fields/EventTime__c.field-meta.xml
<CustomField>
    <fullName>EventTime__c</fullName>
    <description>Event Time</description>
    <label>EventTime</label>
    <type>DateTime</type>
</CustomField>