unpackaged/main/default/objects/Driver_Logout_Event__e/fields/FacilityID__c.field-meta.xml
<CustomField>
    <fullName>FacilityID__c</fullName>
    <description>Facility ID</description>
    <label>FacilityID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>