unpackaged/main/default/objects/Driver_Logout_Event__e/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <description>Salesforce Logged in  User ID</description>
    <label>UserID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>